// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <TextareaInput /> rendering should render character counter correctly 1`] = `
<Header
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "maxLength": 300,
      "name": "input-field-name",
      "placeholder": "type here",
    }
  }
  touched={false}
>
  <ForwardRef
    aria-describedby="subtitle-input-field-name"
    infoText="0/300 tekens"
    onBlur={[Function]}
    placeholder="type here"
  />
</Header>
`;

exports[`Form component <TextareaInput /> rendering should render character counter with value correctly 1`] = `
<Header
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "maxLength": 300,
      "name": "input-field-name",
      "placeholder": "type here",
    }
  }
  touched={false}
>
  <ForwardRef
    aria-describedby="subtitle-input-field-name"
    infoText="4/300 tekens"
    onBlur={[Function]}
    placeholder="type here"
  />
</Header>
`;

exports[`Form component <TextareaInput /> rendering should render no text area field when not visible 1`] = `""`;

exports[`Form component <TextareaInput /> rendering should render text area field correctly 1`] = `
<Header
  getError={[MockFunction]}
  hasError={[MockFunction]}
  meta={
    Object {
      "isVisible": true,
      "name": "input-field-name",
      "placeholder": "type here",
    }
  }
  touched={false}
>
  <ForwardRef
    aria-describedby="subtitle-input-field-name"
    infoText={false}
    onBlur={[Function]}
    placeholder="type here"
  />
</Header>
`;
